2010-09-01 : fixed a bug on mac 32bit when reading in net3 version string
2010-09-01 : some vars with grid and singleton dims were wrongly analyzed by cmor_variable has not being defined with the right number of dimmensions.
2010-09-01 : updated doc. Was saying you can pass "none" for units when it really is: ""
2010-09-01 : updated doc. Was wrongly stating you can pass "none" if no missing_value
2010-08-24 : when writing time only variables, the time_bnds would fail to write if passed at cmor_write time.
2010-08-23 : tagging 2.2
2010-08-23 : DRS was wrongly constructed for table Oclim
2010-08-23 : tagging 2.1
2010-08-23 : create_output_path doesn't need to be called b4 cmor_write any more.
2010-08-19 : dimensions were always stored as double regardless of what the table wanted. Fixed
2010-08-19 : go thru cmor_create_path to figure out isfixed and set frequency, even if directory layout is not required.
2010-08-19 : checker: works with version number of format major.minor.patch
2010-08-19 : checker: update git url from wich to fetch md5s tables
2010-08-19 : forcings attribute can now end with notes in between parenthesis
2010-08-18 : added a check for cmor_variables making sure axes/grid ids passed are valid
2010-08-18 : downgraded abs min/max CRITICAL error to NORMAL
2010-08-18 : dowgraded invalid min/max from NORMAL error to WARNING
2010-08-10 : cmor_setup, was initalizing strings beyhond the max number fo elts, cause seg fault with python (loop was to CMOR_MAX_ELEMENTS when it should have been CMOR_MAX_ATTRIBUTES)
2010-06-14 : expanded the CMOR_MAX_GRIDS to 100 form 10. And replaced the "10" in the code with CMOR_MAX_GRIDS
2010-06-14 : updated python example and testtable to work w/o error about abs mean
2010-06-11 : shorten the TestTables to a minimum so they can't be confused with the real one and used in production
2010-06-11 : removed tables unused by examples
2010-06-11 : add ${Prefix}/share to the list of locations where to search for tables