@@ -1,3 +1,4 @@
+2010-09-22 : Joerg found a bug that was due to checking only the refvar.dimension w/o checking the actual tables as well
 2010-09-01 : fixed a bug on mac 32bit when reading in net3 version string
 2010-09-01 : some vars with grid and singleton dims were wrongly analyzed by cmor_variable has not being defined with the right number of dimmensions.
 2010-09-01 : updated doc. Was saying you can pass "none" for units when it really is: ""
